# Win7-Revival

./: .gitignore  Agents.md  BUILD.md  CLAUDE.md  ChatAi.md  Directory.Build.props  GlassBar.sln  LICENSE  PLAN.md  PUBLISHING.md  README.md  SECURITY.md  TESTING.md  VSCODE-PUBLISHING.md  VSCODE-SETUP.md  WORKLOG.md  Win7Revival.sln  build.ps1  config.json  create-release.ps1  plan.md  publish-standalone-full.ps1  publish-standalone-quick.ps1  publish-standalone.ps1  publish.ps1
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml  codeql.yml  dependency-submission.yml  dotnet-desktop.yml  release.yml
Core/: AllProgramsEnumerator.cpp  AllProgramsEnumerator.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Core.cpp  Core.h  CoreApi.cpp  CoreApi.h  Diagnostics.cpp  Diagnostics.h  IpcBridge.cpp  IpcBridge.h  OverlayHost.cpp  OverlayHost.h  Renderer.cpp  Renderer.h  ShellTargetLocator.cpp  ShellTargetLocator.h  StartMenuHook.cpp  StartMenuHook.h  StartMenuWindow.cpp  StartMenuWindow.h  WindowDiagnostic.cpp  main.cpp
Core/XamlBridge/: SharedBlurState.h  TAPInjector.cpp  TAPInjector.h  TAPObject.cpp  TAPObject.h  VisualTreeWatcher.cpp  VisualTreeWatcher.h  XamlBridge.cpp  XamlBridge.def  XamlBridge.h  XamlBridgeCommon.h  dllmain.cpp
Dashboard/: App.xaml  App.xaml.cs  ConfigManager.cs  CoreManager.cs  CoreNative.cs  CoreProcessManager.cs  CrystalFrame.Dashboard.csproj  DebounceTimer.cs  DetailWindow.xaml  DetailWindow.xaml.cs  GlassBar.Dashboard.csproj  IpcClient.cs  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  TrayIconManager.cs  app.manifest
Win7Revival.App/: App.xaml  App.xaml.cs  AppLogger.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  StartMenuWindow.xaml  StartMenuWindow.xaml.cs  TrayIconManager.cs  Win7Revival.App.csproj  WindowIconHelper.cs  app.manifest
Win7Revival.App/Localization/: Strings.cs
Win7Revival.Core/: Win7Revival.Core.csproj
Win7Revival.Core.Tests/: CoreServiceTests.cs  SettingsServiceTests.cs  Win7Revival.Core.Tests.csproj
Win7Revival.Core/Interfaces/: IModule.cs
Win7Revival.Core/Models/: AppSettings.cs  ModuleSettings.cs
Win7Revival.Core/Services/: AutoStartService.cs  CoreService.cs  SettingsService.cs
Win7Revival.Modules.StartMenu/: Class1.cs  StartMenuModule.cs  Win7Revival.Modules.StartMenu.csproj  WinKeyInterceptor.cs
Win7Revival.Modules.StartMenu/Interop/: StartMenuInterop.cs
Win7Revival.Modules.StartMenu/Models/: StartMenuSettings.cs
Win7Revival.Modules.StartMenu/Services/: ControlPanelItems.cs  ProgramDiscovery.cs  ShellLauncher.cs
Win7Revival.Modules.Taskbar/: DpiHelper.cs  OverlayWindow.cs  TaskbarDetector.cs  TaskbarModule.cs  Win7Revival.Modules.Taskbar.csproj
Win7Revival.Modules.Taskbar/Interop/: Win32Interop.cs
docs/: Agents.md  BUILD.md  TESTING.md  VSCODE-SETUP.md
